# ambs

ambs_core/include/ambs_base/: ambs_base.hpp
ambs_core/include/ambs_core/ambs_base_interface/: ambs_boolean_interface.hpp
ambs_core/src/: test_base.cpp
ambs_core/src/ambs_base/: ambs_base.cpp
ambs_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ambs_gui/include/ambs_gui/: my_plugin.h  publisher.h  tablemodel.h
ambs_gui/launch/: ambs_gui.launch
ambs_gui/scripts/: my_plugin
ambs_gui/src/: test.cpp
ambs_gui/src/ambs_gui/: my_plugin.cpp  my_plugin.ui  tablemodel.cpp
